[build-system]
requires = ["hatchling","google-cloud-bigquery","google-cloud-storage"]
build-backend = "hatchling.build"
[project]
name = "imagebase"
version = "0.0.1"
authors = [
  { name="Damon Reed", email="dreed@nomadia.org" },
]
description = "A image tracking database for AI images. Uses GCP for storage."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/damonreed/img-db"
Issues = "https://github.com/damonreed/img-db/issues"